getting_started/test_files/semantic_errors/UseBeforeDeclaration.cpm
main(): int {
  x := 5
  volatile x: int := 0
  return 0
}
